# GPML

./: Cargo.toml  README.md  test_html_support.gpml  test_performance.gpml
.claude/: settings.local.json
crates/gpml/: Cargo.toml  README.md
crates/gpml/.claude/: settings.local.json
crates/gpml/assets/: node_definitions.json
crates/gpml/src/: ast.rs  bundled_assets.rs  canvas.rs  component.rs  error.rs  hot_reload.rs  lib.rs  main.rs  parser.rs  parser_new.rs  parser_simple.rs  renderer.rs  style.rs
crates/gpml/src/elements/: form.rs  formatting.rs  interactive.rs  layout.rs  list.rs  media.rs  misc.rs  mod.rs  quote.rs  semantic.rs  table.rs  text.rs
crates/story/: Cargo.toml
crates/story/assets/json_ui_examples/: README.md  basic.json  card_component.json  complex.json  deeply_nested.json  header_component.json  interactive.json  interactive_card.json  nested_example.json
crates/story/examples/: code-editor.rs  large-text.rs  markdown.rs
crates/story/examples/fixtures/: completion_items.json  test.rs
crates/story/src/: form_story.rs  input_story.rs  json_ui_story.rs  label_story.rs  lib.rs  main.rs  notification_story.rs  number_input_story.rs  otp_input_story.rs  textarea_story.rs
crates/ui/: Cargo.toml
crates/ui/locales/: ui.yml
crates/ui/src/: color_picker.rs  drawer.rs  form.rs  group_box.rs  icon.rs  inspector.rs  label.rs  lib.rs  shader_triangle.wgsl  styled.rs  viewport.rs
examples/basic-ui/: App.gpml
examples/card-component/: App.gpml  Card.gpml
examples/realtime-refresh/: App.gpml
themes/: catppuccin.json
(+35 files in other folders)
