[package]
edition = "2021"
name = "pulsar_engine"
description = "A modern high-performance game engine written in Rust"
publish = false
version = "0.1.0"

[[bin]]
name = "pulsar_engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = ["webview", "tree-sitter-languages"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1.41"
rust-embed = "8.5.0"
flume = "0.11"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
